--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "carte-du-ciel-backend",
+  "version": "0.0.1",
+  "main": "index.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tkmmoise/carte-du-ciel-backend"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
   }
 }
